--- a/Day1/task1.html
+++ b/Day1/task1.html
@@ -1,22 +1,7 @@
 <html>
     <head>
         <title>Task1</title>
-        <style>
-            .form-format{
-                border: double gray 3px;
-                height: 200 px;
-                width: 230px;
-                text-align: center;
-                margin-left: 40%;
-                margin-top: 13.5%;
-            }
-            input[type="text"],input[type="email"]{
-                margin: 5px;
-                padding: 5px;
-                background-color: azure;
-                border: dotted lightgray 1px;
-            }
-        </style>
+        <link rel="stylesheet" href="task2.css">
     </head>
     <body>
         <div class="form-format" >
