day2 task3 Resume

--- a/Day2/task1.html
+++ b/Day2/task1.html
@@ -1,5 +1,5 @@
-<!-- create 8 empty rect. with similar amout of margin and padding 
-    add  box inside box in center with size-->
+<!-- task1: create 8 empty rect. with similar amout of margin and padding, add  box inside box in center with size 
+    task2:use button with out border-->
 
 <!DOCTYPE html>
 <html lang="en">
