Day2 Task5 Replica

--- a/Day2/Task4/task4.html
+++ b/Day2/Task4/task4.html
@@ -20,8 +20,8 @@
                 <span class="list"><b>LONG HAUL</b></span>
                 <span class="list"><b>MULTICENTER</b></span>
                 <span class="list"><b>DESTINATIONS</b></span>
-                <span class="list"><img src="menu.png" class="menulogo"></span>
             </div>
+            <div class="list"><img src="menu.png" class="menulogo"></div>
         </div>
     </div>
     <div class="container">
