--- a/Day4/Task4/index.html
+++ b/Day4/Task4/index.html
@@ -13,7 +13,7 @@ username mini. character 5-15, email format, mobile number 10 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form method="get" action="#">
+    <form method="get" action="#" class="container-fluid">
         <div class="row g-3 m-3">
             <div class="col-3 form-floating">
                 <input type="text" class="form-control" id="name" placeholder="Full Name">
@@ -42,13 +42,13 @@ username mini. character 5-15, email format, mobile number 10 -->
                 <label for="floatingSelect">City</label>
             </div>
         </div>
-        <div class="row g-3 m-3">
-            <div class="col-12">
+        <div class="row m-3 justify-content-center ">
+            <div class="col-1">
                 <button class="btn btn-primary" type="button" onclick="savedata()">Submit</button>
             </div>
         </div>
     </form>
-    <table class="table" id="content">
+    <table class="table table-success" id="content">
         <thead>
           <tr>
             <th scope="col">#</th>
